add new archives

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,21 +1,7 @@
 <h1>Contact</h1>
 <form>
-    <div class="form-group">
-        <label for="name">Seu Nome</label>
-        <input type="text" [(ngModel)]="to" class="form-control" name="to" id="name" aria-describedby="nameFull" placeholder="Digite aqui">
-    </div>
-    <div class="form-group">
-        <label for="exampleInputEmail1">E-mail</label>
-        <input type="email" [(ngModel)]="from" name="from" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-            placeholder="email@exemplo.com.br">
-    </div>
-    <div class="form-group">
-        <label for="name">Assunto</label>
-        <input type="text"  [(ngModel)]="subject" name="subject" class="form-control" id="name" aria-describedby="nameFull" placeholder="Digite aqui">
-    </div>
-    <div class="form-group">
-        <label for="exampleFormControlTextarea1">Mensagem</label>
-        <textarea class="form-control" [(ngModel)]="mensage" name="mensage" id="exampleFormControlTextarea1" rows="3" placeholder="Escreva aqui sua mensagem"></textarea>
-    </div>
-    <button (click)="postSendEmailData()" type="submit" class="btn btn-primary">Submit</button>
+    <h2>
+        For any questions please mail us:
+        <p>luanoliveira1107@gmail.com</p>
+    </h2>
 </form>
