--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -2,9 +2,9 @@
     <h1>About Me</h1>
 
     <p>
-        Graduated in Systems Analysis and Development from Estácio de Sá, with an MBA in Software Engineering from
+        Graduated in Análise e Desenvolvimento de sistemas from Estácio de Sá, with an MBA in Engenharia de software from
         Impacta
-        in Brazil and studying digital game development at IPMAIA in Portugal. I really like technology, getting to know
+        in Brazil and studying Produção Multimédia e Jogos Digitais at Instituto Politécnico da Maia in Portugal. I really like technology, getting to know
         new
         and simple things that generate more productivity and impact for people.
     </p>
@@ -12,7 +12,7 @@
     <h2>Work Experience</h2>
 
     <div class="ExperenceGroup">
-        <h3>Software Engineering</h3>
+        <h3>Engenheiro de software</h3>
         <div class="company">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-building"
                 viewBox="0 0 16 16">
@@ -38,11 +38,11 @@
                 <path
                     d="M6.5 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2z" />
             </svg>
-            <span>Fev 2020 - Set 2020</span>
+            <span>09/2020 - 05/2023</span>
         </div>
     </div>
     <div class="ExperenceGroup">
-        <h3>QA Junior Test Analyst</h3>
+        <h3>QA Júnior Analista de teste</h3>
         <div class="company">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-building"
                 viewBox="0 0 16 16">
@@ -68,12 +68,12 @@
                 <path
                     d="M6.5 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2z" />
             </svg>
-            <span>Fev 2020 - Set 2020</span>
+            <span>02/2020 - 09/2020</span>
         </div>
 
     </div>
     <div class="ExperenceGroup">
-        <h3>QA Junior Test Analyst</h3>
+        <h3>QA Júnior Analista de teste</h3>
         <div class="company">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-building"
                 viewBox="0 0 16 16">
@@ -99,14 +99,14 @@
                 <path
                     d="M6.5 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2z" />
             </svg>
-            <span>Fev 2020 - Set 2020</span>
+            <span>11/2018 - 02/2020</span>
         </div>
     </div>
 
     <h2>Education</h2>
 
     <div class="ExperenceGroup">
-        <h3>Technical degree course in Produção Multimédia e Jogos Digitais</h3>
+        <h3>Produção Multimédia e Jogos Digitais</h3>
         <div class="company">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-building"
                 viewBox="0 0 16 16">
@@ -115,7 +115,7 @@
                 <path
                     d="M2 1a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1v14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V1Zm11 0H3v14h3v-2.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 .5.5V15h3V1Z" />
             </svg>
-            <span>Polytechnic Institute of Maia</span>
+            <span>Instituto Politécnico da Maia</span>
         </div>
         <div class="countrie">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -132,11 +132,11 @@
                 <path
                     d="M6.5 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2z" />
             </svg>
-            <span>Set 2022 - Set 2024</span>
+            <span>09/2022 - 03/2024</span>
         </div>
     </div>
     <div class="ExperenceGroup">
-        <h3>Master of Business Administration - Software Engineering</h3>
+        <h3>Master of Business Administration - Engenharia de software</h3>
         <div class="company">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-building"
                 viewBox="0 0 16 16">
@@ -162,11 +162,11 @@
                 <path
                     d="M6.5 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2z" />
             </svg>
-            <span> Abr 2021 - Mar 2022</span>
+            <span> 03/2021 - 04/2022</span>
         </div>
     </div>
     <div class="ExperenceGroup">
-        <h3>Technical degree course in System Development Analysis</h3>
+        <h3>Análise de Desenvolvimento de Sistemas</h3>
         <div class="company">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-building"
                 viewBox="0 0 16 16">
@@ -192,7 +192,7 @@
                 <path
                     d="M6.5 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2z" />
             </svg>
-            <span> Jan 2017 - Jan 2019</span>
+            <span> 01/2017 - 02/2019</span>
         </div>
     </div>
 </section>
