--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -6,11 +6,14 @@ h1 {
 }
 
 h2 {
+    margin-top: 1em;
     color: #42446E;
     font-size: 42px;
+    text-align: center;
 }
 
 p {
     color: #666666;
-    font-size: 20px;
+    font-size: 2rem;
+    margin-top: 1rem;
 }
