--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,16 +1,3 @@
-<section class="marginTop">
-    <div>
-        <h1>
-            <p>Hi,</p>
-            <p>My name is </p>
-            <p>Luan Oliveira</p>
-        </h1>
-    </div>
-    <div>
-
-    </div>
-</section>
-<section id="about" class="marginTop"><app-about></app-about></section>
-<section id="tech-stack" class="marginTop"><app-tech-stack></app-tech-stack></section>
-<section id="project" class="marginTop"><app-projects></app-projects></section>
-<section id="contact" class="marginTop"><app-contact></app-contact></section>
+<footer>
+    <p>Este é o rodapé da minha aplicação.</p>
+</footer>
