--- a/src/app/components/nav-menu/nav-menu.component.css
+++ b/src/app/components/nav-menu/nav-menu.component.css
@@ -7,6 +7,7 @@ a.navbar-brand {
 html {
   font-size: 14px;
 }
+
 @media (min-width: 768px) {
   html {
     font-size: 16px;
@@ -17,11 +18,12 @@ html {
   box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
 
-body, html{
+body,
+html {
   scroll-behavior: smooth !important;
 }
 
-.mediaSocial{
+.mediaSocial {
   margin-left: 1em;
   color: gray;
 }
