--- a/src/index.css
+++ b/src/index.css
@@ -16,8 +16,13 @@
 
 @layer utilities {
     .shadow-custom {
-        box-shadow: 
-        0 4px 15px -6px rgba(0, 0, 0, 0.3),
-        0 4px 25px -6px rgba(0, 0, 0, 0.3);
+        box-shadow:
+            0 4px 15px -6px rgba(0, 0, 0, 0.3),
+            0 4px 25px -6px rgba(0, 0, 0, 0.3);
     }
+}
+
+.animPage {
+    animation-timeline: view();
+    animation-range: entry 0% cover 40%;
 }
